[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/IrAlMenuScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=4]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=5]
[ext_resource path="res://fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/VozScene.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 1, 1, 1 )
thickness = 10

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 3 )

[node name="VozScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1444.0
margin_top = -425.407
margin_right = 476.002
margin_bottom = 854.593
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -336.0
margin_right = 284.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -310.0
margin_top = 20.0
margin_right = 256.0
margin_bottom = 465.0
custom_constants/separation = 160
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 566.0
margin_bottom = 207.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VozTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 566.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Voz"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 566.0
margin_bottom = 146.0
grow_vertical = 0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocidadLabel" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 135.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Velocidad"
align = 1

[node name="VelocidadBar" type="HSlider" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 165.0
margin_top = 10.0
margin_right = 566.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/slider = SubResource( 4 )
min_value = -24.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 566.0
margin_bottom = 207.0
grow_vertical = 0
custom_constants/separation = 45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumenLabel" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 121.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Volumen"
align = 1

[node name="VolumenBar" type="HSlider" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 166.0
margin_top = 10.0
margin_right = 566.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/slider = SubResource( 4 )
min_value = -24.0
max_value = 0.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 367.0
margin_right = 566.0
margin_bottom = 423.0

[node name="VolverAAccesibilidadButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 51.0
margin_right = 514.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "4. Volver a accesibilidad"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="IrAlMenuScene" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="VBoxContainer/CenterContainer/VolverAAccesibilidadButton" to="." method="_on_VolverAAccesibilidadButton_pressed"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
